--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,10 +10,14 @@
     Login page
 </h1>
 <form th:action="@{/login}" method="post">
-    <label for="username">Username</label>:
+    <label for="username">E-mail</label>:
     <input type="text" id="username" name="username" /><br />
     <label for="password">Password</label>:
     <input type="password" id="password" name="password" /> <br />
+
+    <label for="remember-me">Remember me</label>
+    <input for="checkbox" id="remember-me" name="remember-me" /> <br />
+
     <input type="submit" value="Log in" />
 </form>
 </body>
