--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
     <input type="password" id="password" name="password" /> <br />
 
     <label for="remember-me">Remember me</label>
-    <input for="checkbox" id="remember-me" name="remember-me" /> <br />
+    <input type="checkbox" id="remember-me" name="remember-me" /> <br />
 
     <input type="submit" value="Log in" />
 </form>
